apps/uptime-kuma/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:2
          imagePullPolicy: Always

          ports:
            - containerPort: 3001
              name: http

          volumeMounts:
            - name: data
              mountPath: /app/data

          startupProbe:
            httpGet:
              path: /
              port: 3001
            periodSeconds: 10
            failureThreshold: 6

          readinessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: uptime-kuma-data

      restartPolicy: Always
